# news

awsnews/: Dockerfile  requirements.txt  scrapy.cfg
awsnews/awsnews/: items.py  middlewares.py  pipelines.py  settings.py
awsnews/awsnews/spiders/: o_globo.py
website/: notebook.ipynb  pyproject.toml
website/backend/: main.py
website/backend/data/: nucleos.json  nucleos_com_coordenadas.json
website/backend/static/css/: styles.css
website/backend/static/js/: mapa_nucleos.js
website/backend/templates/: base.html  contatos.html  eventos.html  index.html  nucleo.html  nucleos.html
