[tool.poetry]
name = "website"
version = "0.1.0"
description = "my personal website"
authors = ["almeidadm <almeidadm@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.2"
fastapi = "^0.115.12"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
